refactor: MorphemeTypeEnum ArrayList -> List로 수정